# rpg-api

./: 404.html  index.html  mkdocs.yml  pyproject.toml
bestiary/: index.html
docs/: bestiary.md  index.md
search/: search_index.json
